# filters

./: CMakeLists.txt  Config.cpp  Config.h  Conveyor.cpp  Conveyor.h  ConveyorManager.cpp  ConveyorManager.h  Filters.cpp  Filters.h  IConveyorObserver.h  IConveyorSubject.h  IObserver.h  IProcessor.h  ISubject.h  Image.cpp  Image.h  LICENSE  Node.cpp  Node.h  NodeType.h  README.md  main.cpp
cards/: ColorGeneratorCard.cpp  ColorGeneratorCard.h  ConveyorCard.cpp  ConveyorCard.h  ConveyorManagerCard.cpp  ConveyorManagerCard.h  GaussianBlurCard.cpp  GaussianBlurCard.h  GaussianNoiseCard.h  MedianCard.cpp  NodeInputCard.cpp  NodeInputCard.h  NodeOutputCard.cpp  NodeOutputCard.h
command/: AConnectCommand.h  ConnectColorGeneratorCommand.cpp  ConnectColorGeneratorCommand.h  ConnectConveyorCommand.cpp  ConnectConveyorCommand.h  ConnectConveyorManagerCommand.cpp  ConnectConveyorManagerCommand.h  ConnectGaussianBlurCommand.cpp  ConnectGaussianBlurCommand.h  ConnectGaussianNoiseCommand.cpp  ConnectGaussianNoiseCommand.h  ConnectInputCommand.cpp  ConnectInputCommand.h  ConnectMedianCommand.cpp  ConnectMedianCommand.h  ConnectOutputCommand.cpp  ConnectOutputCommand.h  CreateConnectionCommand.cpp  CreateConnectionCommand.h  CreateConveyorCommand.cpp  CreateConveyorCommand.h  CreateNodeCommand.cpp  CreateNodeCommand.h  DeleteConnectionCommand.cpp  DeleteConnectionCommand.h  DeleteConveyorCommand.cpp  DeleteConveyorCommand.h  DeleteNodeCommand.cpp  DeleteNodeCommand.h  DisconnectColorGeneratorCommand.cpp  DisconnectColorGeneratorCommand.h  DisconnectConveyorCommand.cpp  DisconnectConveyorCommand.h  DisconnectConveyorManagerCommand.cpp  DisconnectConveyorManagerCommand.h  DisconnectGaussianBlurCommand.cpp  DisconnectGaussianBlurCommand.h  DisconnectGaussianNoiseCommand.cpp  DisconnectGaussianNoiseCommand.h  DisconnectInputCommand.cpp  (+16 more)
command/attachCommands/: AAttachCommand.h  AConnectCommand.h  AttachColorGeneratorCommand.cpp  AttachColorGeneratorCommand.h  AttachConveyorCommand.cpp  AttachConveyorCommand.h  AttachConveyorManagerCommand.cpp  AttachConveyorManagerCommand.h  AttachGaussianBlurCommand.cpp  AttachGaussianBlurCommand.h  AttachGaussianNoiseCommand.cpp  AttachGaussianNoiseCommand.h  AttachInputCommand.cpp  AttachInputCommand.h  AttachMedianCommand.cpp  AttachMedianCommand.h  AttachOutputCommand.cpp  AttachOutputCommand.h  ConnectColorGeneratorCommand.cpp  ConnectColorGeneratorCommand.h  ConnectConveyorCommand.cpp  ConnectConveyorCommand.h  ConnectConveyorManagerCommand.cpp  ConnectConveyorManagerCommand.h  ConnectGaussianBlurCommand.cpp  ConnectGaussianBlurCommand.h  ConnectGaussianNoiseCommand.cpp  ConnectGaussianNoiseCommand.h  ConnectInputCommand.cpp  ConnectInputCommand.h  ConnectMedianCommand.cpp  ConnectMedianCommand.h  ConnectOutputCommand.cpp  ConnectOutputCommand.h
command/createCommands/: CreateConnectionCommand.cpp  CreateConnectionCommand.h  CreateConveyorCommand.cpp  CreateConveyorCommand.h  CreateNodeCommand.h
command/deattach/: DeattachColorGeneratorCommand.cpp  DeattachColorGeneratorCommand.h  DeattachConveyorCommand.cpp  DeattachConveyorCommand.h  DeattachConveyorManagerCommand.cpp  DeattachConveyorManagerCommand.h  DeattachGaussianBlurCommand.cpp  DeattachGaussianBlurCommand.h  DeattachGaussianNoiseCommand.cpp  DeattachGaussianNoiseCommand.h  DeattachInputCommand.cpp  DeattachInputCommand.h  DeattachMedianCommand.cpp  DeattachMedianCommand.h  DeattachOutputCommand.cpp  DeattachOutputCommand.h  DisconnectColorGeneratorCommand.cpp  DisconnectColorGeneratorCommand.h  DisconnectConveyorCommand.cpp  DisconnectConveyorCommand.h  DisconnectConveyorManagerCommand.cpp  DisconnectConveyorManagerCommand.h  DisconnectGaussianBlurCommand.cpp  DisconnectGaussianBlurCommand.h  DisconnectGaussianNoiseCommand.cpp  DisconnectGaussianNoiseCommand.h  DisconnectInputCommand.cpp  DisconnectInputCommand.h  DisconnectMedianCommand.cpp  DisconnectMedianCommand.h  DisconnectOutputCommand.cpp  DisconnectOutputCommand.h
command/deleteCommands/: DeleteConnectionCommand.h  DeleteConveyorCommand.h  DeleteNodeCommand.h
command/setCommands/: SetColorGeneratorCommand.cpp  SetColorGeneratorCommand.h  SetGaussianBlurCommand.h  SetGaussianNoiseCommand.h  SetMedianCommand.cpp  SetMedianCommand.h  SetNodeInputCommand.cpp  SetNodeInputCommand.h  SetNodeOutputCommand.cpp  SetNodeOutputCommand.h
gui/: Connection.h  ConnectionGeometry.h  ConnectionGraphicsObject.h  ConnectionState.h  DataModelRegistry.h  FiltersScene.cpp  FiltersScene.h  FiltersView.cpp  FiltersView.h  FiltersWindow.cpp  FiltersWindow.h  Node.cpp  Node.h  NodeData.h  NodeDataModel.h  NodeGeometry.h  NodeGraphicsObject.cpp  NodeGraphicsObject.h  NodePainter.cpp  NodePainter.h  NodePainterDelegate.h  NodeState.cpp  NodeState.h  PortType.h  TypeConverter.h
gui/cards/: ConveyorCard.cpp  ConveyorCard.h  ConveyorManagerCard.cpp  ConveyorManagerCard.h  GaussianBlurCard.h  GaussianNoiseCard.cpp  MedianCard.h  NodeInputCard.cpp
gui/datamodels/: NodeInputDataModel.cpp  NodeInputDataModel.h  TextData.h
nodes/: ANode.h  BlackAndWhiteNode.cpp  BlackAndWhiteNode.h  ColorGeneratorNode.cpp  ColorGeneratorNode.h  CombineNode.cpp  CombineNode.h  EdgeDetectionNode.cpp  EdgeDetectionNode.h  GaussianBlurNode.cpp  GaussianBlurNode.h  GaussianNoiseNode.cpp  GaussianNoiseNode.h  INode.h  MedianNode.cpp  MedianNode.h  NegativeNode.cpp  NegativeNode.h  NodeInput.cpp  NodeInput.h  NodeOutput.cpp  NodeOutput.h
processors/: BlackAndWhiteProcessor.cpp  BlackAndWhiteProcessor.h  CombineProcessor.cpp  CombineProcessor.h  EdgeDetectionProcessor.cpp  EdgeDetectionProcessor.h  GaussianBlurProcessor.cpp  GaussianBlurProcessor.h  GaussianNoiseProcessor.cpp  GaussianNoiseProcessor.h  IProcessor.h  ImageOutputProcessor.cpp  ImageOutputProcessor.h  ImageSourceProcessor.cpp  ImageSourceProcessor.h  NegativeProcessor.cpp  NegativeProcessor.h
utilities/: CustomStack.cpp  CustomStack.h  IdGenerator.cpp  IdGenerator.h  applyVectorTransform.cpp  applyVectorTransform.h
